# ChangeLog for net-im/leechcraft-azoth
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-im/leechcraft-azoth/ChangeLog,v 1.5 2011/10/23 17:23:50 maksbotan Exp $

  23 Oct 2011; Maxim Koltsov <maksbotan@gentoo.org>
  leechcraft-azoth-9999.ebuild, metadata.xml:
  Add isterique plugin to 9999 version

  24 Sep 2011; Maxim Koltsov <maksbotan@gentoo.org>
  leechcraft-azoth-9999.ebuild, metadata.xml:
  Add otroid use flag to 9999 version

*leechcraft-azoth-0.4.90 (14 Sep 2011)

  14 Sep 2011; Maxim Koltsov <maksbotan@gentoo.org>
  +leechcraft-azoth-0.4.90.ebuild:
  Bump net-im/leechcraft-azoth to 0.4.90, thanks to 0xd34df00d

  25 Aug 2011; Maxim Koltsov <maksbotan@gentoo.org>
  leechcraft-azoth-0.4.85.ebuild, leechcraft-azoth-9999.ebuild:
  Add missing x11-libs/qt-dbus dependency, make 'metacontacts' use '+'

*leechcraft-azoth-9999 (23 Aug 2011)
*leechcraft-azoth-0.4.85 (23 Aug 2011)

  23 Aug 2011; Maxim Koltsov <maksbotan@gentoo.org>
  +leechcraft-azoth-0.4.85.ebuild, +leechcraft-azoth-9999.ebuild,
  +metadata.xml:
  Copy net-im/leechcraft-azoth from rion-overlay, thanks to 0xd34df00d
