@@ -1,7 +1,9 @@
 DIST leechcraft-0.4.85.tar.bz2 4048479 RMD160 e1a57dbe445ee595da73ea31028d7cd74dc1da95 SHA1 f755543d758e073068bbe2cda927212ce2733532 SHA256 8653262be3f922bff1cddb6c165743ddce803751226bc494fd952387058300c2
 DIST leechcraft-0.4.90.tar.bz2 4934648 RMD160 ccf069e3d853e59576665b0d472f3d4653cad670 SHA1 9967ef523c379f85d0013da3f5626b8691466d4a SHA256 8baf875a75791ea11803ffd34799b10977d004041e55c9e6cd1c5e6e5394667f
+DIST leechcraft-0.4.96.tar.xz 4580632 RMD160 b8b2692d5a664e569c8420c95893f602c3f73c95 SHA1 753a49b90998f130a1e0f32b1bfdae69a8a7fc0c SHA256 36c488a6b87e4c78d4dbb36dd1cd061de73c76ae308ce352e926df373a0c756b
 EBUILD leechcraft-azoth-0.4.85.ebuild 2314 RMD160 a75d97b22fdcff8a68ae67f9c44988eec18ed17e SHA1 ac6bc4e5d5fbddd9b842f7e5dafa89a7a929a33e SHA256 bf393ff278ebe9a14353a27d3ff2dfb902e34ffd5fde81a7f7bdd2e8c3591a0e
 EBUILD leechcraft-azoth-0.4.90.ebuild 2308 RMD160 381a4b877b86e709942d3d7621d1e86a3fd936fd SHA1 b774cf2e8d9f070ebf6e086d68ff5bbb47fa35d4 SHA256 502825e4264afef14281e4a2aba6b50adab0a6ed0eaf6b8bd34a5e4b1ba52e1d
-EBUILD leechcraft-azoth-9999.ebuild 2452 RMD160 6e579fbd69ffce98ce6fe9324dd74bf6e4a76494 SHA1 21ae94640116beb39ee661368b861982ba35c519 SHA256 4c940999b5a2c7323bd8204bd31f1c23ffb8801d5bd6db60ee757b557035cd8c
-MISC ChangeLog 1160 RMD160 71b0ed1438a3bf6098d832e2061599ddb1e451a0 SHA1 7f7718f7d4908b25fccc95b2ffe3e28451598236 SHA256 525e6d0af358ec702a57c449298990f10a536371aaa683409789fa91e7ac95f7
-MISC metadata.xml 1942 RMD160 1805e5e94a1d08c2e9f394950da93db6d4d2dfe8 SHA1 7e769c0552bfe05e8a0ed431e38e350a376ae76c SHA256 81bfcd5da3ef3e1dbfdb4cbfd7740390fc663e336d69005fd095135ef3d38222
+EBUILD leechcraft-azoth-0.4.96.ebuild 2459 RMD160 3ec8da27156b8bc0e4dde3cf242d1c283dd05a47 SHA1 befa7ed96862e4c527d9beaa6133f7aa6ab77f2c SHA256 148e811b0595c424561cc41cb4f0cee3526ba94cdedc51d9686ed1969c5d512d
+EBUILD leechcraft-azoth-9999.ebuild 2502 RMD160 0e2670a05cf326562e514f44bf49bd0bbd601475 SHA1 fe2d5a746a33f3186c137668d546e0db79addb13 SHA256 29e994ab7baf14c95087d7a348a08de3ff29fd82353046d562006b7d88cf5ade
+MISC ChangeLog 1351 RMD160 f6a01393a46b3130fe64936f6707b51b78110a85 SHA1 f0544e1106e256e494b6a613278642f27f64c16a SHA256 5aa8892b4e6cb6182960850632e5e1ae7e18de4ef030ee57cee1558b7a707add
+MISC metadata.xml 2034 RMD160 03473bc390ff11630e920e06b11d74eb5bb135c9 SHA1 78cc1a690037a395c9dc90ffa06ba7fbf8323c2f SHA256 ce7fb2890238cb641572224506f188a3f9a8254bdee551fd33b5cb19b64eb050
