@@ -1,6 +1,12 @@
 # ChangeLog for net-im/leechcraft-azoth
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/leechcraft-azoth/ChangeLog,v 1.5 2011/10/23 17:23:50 maksbotan Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/leechcraft-azoth/ChangeLog,v 1.6 2011/12/15 19:36:38 maksbotan Exp $
+
+*leechcraft-azoth-0.4.96 (15 Dec 2011)
+
+  15 Dec 2011; Maxim Koltsov <maksbotan@gentoo.org>
+  +leechcraft-azoth-0.4.96.ebuild:
+  Bump net-im/leechcraft-azoth to 0.4.96, thanks to 0xd34df00d
 
   23 Oct 2011; Maxim Koltsov <maksbotan@gentoo.org>
   leechcraft-azoth-9999.ebuild, metadata.xml:
